fix(<ContractSteps />): :bug: Fix layout when text is overflow and there is only 2 public contracts

--- a/desktop-app/components/celebrity-profile/contract-steps/styles.module.scss
+++ b/desktop-app/components/celebrity-profile/contract-steps/styles.module.scss
@@ -9,7 +9,7 @@
 
 .ContractStepsNormalLayout {
   flex-flow: column;
-  flex-wrap: wrap;
+  justify-content: center;
   flex: 1 1 100%;
   padding: 20px 41px 7px;
   max-height: 350px;
